# CMOR438-Spring-2026

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt
mlpackage/: README.md  __init__.py  metrics.py  preprocessing.py
mlpackage/supervised_learning/: __init__.py  knn.py  linear_regression.py
mlpackage/tests/: test_knn.py  test_linear_regression.py  test_metrics.py  test_preprocessing.py
notebooks/: demo.ipynb  mlpackage_demo.ipynb
notebooks/Supervised Learning/: decision_trees.ipynb  knn.ipynb  linear_regression.ipynb  logistic_regression.ipynb  naive_bayes.ipynb  neural_networks.ipynb  random_forests.ipynb  svm.ipynb
notebooks/Unsupervised Learning/: hierarchical_clustering.ipynb  kmeans.ipynb  pca.ipynb
