[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlpackage"
version = "0.1.0"
description = "From-scratch machine learning algorithms for CMOR 438 / INDE 577"
readme = "mlpackage/README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Karyn Fu" }]

dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "scikit-learn>=1.3",
    "scipy>=1.11",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["mlpackage*"]

[tool.pytest.ini_options]
testpaths = ["mlpackage/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
